# scara_robot

./: .flake8  .gitignore  .gitmodules  LICENSE  README.md  lab_experience.org  notes.org  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
docs/source/: conf.py  index.rst  introduction.rst  modules.rst  scara.rst  usage.rst
examples/: homing.py  joystick.py  move_straight_line.py  pick_and_same_place.py  plot_data.py  squares.py  terminal.py
odrive_backups/: hombro_config.json  hombro_config_may_2023.json  rc_config.json  rc_config_may_2023.json
pizza_firmware/: platformio.ini
pizza_firmware/include/: can_addresses.h
pizza_firmware/lib/can_comms/: can_addresses.h  can_comms.cpp  can_comms.h
pizza_firmware/lib/digital_output/: digital_output.cpp
pizza_firmware/lib/stepper_motors/: stepper_motors.cpp
pizza_firmware/src/: main.cpp
scara/: __init__.py  can_pizza.py  hardware.py  joint.py  joint_can.py  logger.py  robot.py
scara/communication/: __init__.py  client.py  commands.py  communication_interfase.py  server.py
scara/config/: default.yaml
scara/scripts/: demo_uma_scara.py  server_interfase.py
scara/tools/: __init__.py  enums_dict.py  exceptions.py  fake_odrive.py  hardware_layer.py  inverse_kinematic.py  kinematics.py  manage_files.py  plot_trays.py
scara/trayectory_planning/: s_curve_trayectory.py
test/: test_kinematics.py  test_robot.py
